Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.0.0
-
Fix Version/s: 6.2.0 Alpha
-
Component/s: GUI: Painting
-
Labels:None
-
Platform/s:
-
Commits:7c0c0955ed7d7551e33d44d24dd294b21c1303a7 (qt/qtbase/dev)
Description
When building almost any Qt example a big list of warnings is thrown either in QC or Xcode, it makes it then very hard to follow actual warnings/errors from the app and not warnings from the Qt library itself.
Error is qpainter.h calling drawPolyline.
Attachments
Issue Links
- duplicates
-
QTBUG-86216 qstring.h, qstringbuilder.h: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int'
-
- Reported
-
For Gerrit Dashboard: QTBUG-89273 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
351594,3 | Fix warnings about qsizetype used as int in qpainter.h | dev | qt/qtbase | Status: MERGED | +2 | 0 |