Fix warnings about qsizetype used as int in qpainter.h

Fixes: QTBUG-89273
Change-Id: Ibf3aff3bdb42fe5260cac528355f412c6ae0218f
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>